# aegis

./: .gitattributes  .gitignore  CHROME_EXTENSION_GUIDE.md  DYNAMIC_API_DOCS.md  Dockerfile  EXTENSION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  README.md  advanced_engine.py  annotation_workspace.py  app.py  database.py  entrypoint.sh  export_for_browser.py  inference_server.py  nginx.conf  phase8_arc_predictor.py  plutchik_erc.db  pyproject.toml  requirements.txt  test_api_auth.py  train_v2.py  validate.py  verify_db.py
chrome_extension/: PRIVACY_ARCHITECTURE.md  README.md  background.js  content_script.js  gmail-overlay.js  linkedin-overlay.js  manifest.json  ondevice-inference.js  popup.html  popup.js  reddit-overlay.js  styles.css
core/: __init__.py  advanced_engine.py
data/: train.jsonl
docs/: DATASET_DESIGN_SPECIFICATION.md  HARDENED_ARCHITECTURE_ROADMAP.md  MODEL_ARCHITECTURE.md  PHASE7_EVIDENCE_RUNBOOK.md
extension/: manifest.json
html/: plutchik_extension_ui_spec.html  plutchik_vision_dashboard_v2.1.html
models/: __init__.py  db_models.py  emotion_arc_model.py  multitask_emotion_model.py
plutchik_erc/: app.py  inference_server.py
plutchik_erc_dashboard/: annotation_workspace.py  app.py  entrypoint.sh  inference_server.py  plutchik_erc.db  setup.sh  train_minimal.py  train_v2.py
plutchik_erc_data/: README.md  pyproject.toml
plutchik_erc_data/plutchik_erc_data/: __init__.py
scratch/: execute_internals.py
scripts/: augmenter.py  bias_audit.py  count_cda_verified.py  dataset_hygiene.py  export_onnx.py  train.py  (+3 more)
(+57 files in other folders)
