[project]
name = "plutchik-erc-antigravity"
version = "2.1.0"
description = "Production-grade Emotion Recognition in Conversation Benchmark"
dependencies = [
    "torch==2.3.0",
    "transformers==4.35.2",
    "pandas==2.1.3",
    "streamlit==1.28.0",
    "plotly==5.18.0",
    "captum==0.9.0",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.2",
    "scikit-learn==1.3.2",
    "tqdm==4.66.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
