[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "plutchik-erc-data"
version = "0.1.0"
description = "Version-locked loader for Plutchik ERC production CSV (optional companion to the dashboard repo)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0"]

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.2", "scikit-learn>=1.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["plutchik_erc_data*"]
